--- a/Enciclopedia/Enciclopedia.csproj
+++ b/Enciclopedia/Enciclopedia.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(SolutionDir)data&quot; &quot;$(OutDir)data&quot; /y /i /e/" />
+  </Target>
+
 </Project>
